@@ -1,3 +1,5 @@
+- uploadFile no longer closes the caller's input stream.
+	
 ---------------------------------------------
 1.1.0 (2013-07-08)
 
